# QBreakpad2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buildtest.bat  qbreakpad2.rc
qbreakpad2/: qbreakpad2_global.h  qbreakpad2handler.cpp  qbreakpad2handler.h
qbreakpad2/breakpad/: .gitignore  DEPS  LICENSE
qbreakpad2/breakpad/src/client/linux/crash_generation/: crash_generation_server.cc  crash_generation_server.h
qbreakpad2/breakpad/src/client/linux/handler/: exception_handler.cc  exception_handler.h  exception_handler_unittest.cc  minidump_descriptor.h
qbreakpad2/breakpad/src/client/linux/microdump_writer/: microdump_writer_unittest.cc
qbreakpad2/breakpad/src/client/linux/minidump_writer/: directory_reader_unittest.cc  linux_core_dumper_unittest.cc  linux_dumper.cc  linux_dumper.h  linux_ptrace_dumper.cc  linux_ptrace_dumper_unittest.cc  minidump_writer_unittest.cc  minidump_writer_unittest_utils.cc  minidump_writer_unittest_utils.h  pe_file.h
qbreakpad2/breakpad/src/client/linux/sender/: google_crash_report_sender.cc
qbreakpad2/breakpad/src/common/: byte_cursor.h  byte_cursor_unittest.cc  dwarf_cfi_to_module.cc  dwarf_cfi_to_module.h  dwarf_cfi_to_module_unittest.cc  dwarf_cu_to_module.cc  dwarf_cu_to_module.h  dwarf_cu_to_module_unittest.cc  dwarf_line_to_module.cc  dwarf_line_to_module.h  language.cc  language.h  module.cc  module.h  module_unittest.cc  path_helper.cc  path_helper.h  simple_string_dictionary.h  stabs_reader.cc  stabs_reader.h  stabs_reader_unittest.cc  stabs_to_module.cc  stabs_to_module.h  string_conversion.cc  string_conversion.h  string_view.h  test_assembler.cc  test_assembler.h  test_assembler_unittest.cc
qbreakpad2/breakpad/src/common/dwarf/: bytereader_unittest.cc  cfi_assembler.cc  cfi_assembler.h  dwarf2diehandler.cc  dwarf2diehandler.h  dwarf2diehandler_unittest.cc  dwarf2enums.h  dwarf2reader.cc  dwarf2reader.h  dwarf2reader_cfi_unittest.cc  dwarf2reader_die_unittest.cc  dwarf2reader_lineinfo_unittest.cc  dwarf2reader_splitfunctions_unittest.cc  elf_reader.cc  elf_reader.h  functioninfo.cc  functioninfo.h
qbreakpad2/breakpad/src/common/linux/: breakpad_getcontext.S  dump_symbols.cc  dump_symbols.h  dump_symbols_unittest.cc  elf_core_dump_unittest.cc  elf_symbols_to_module_unittest.cc  file_id.cc  file_id.h  file_id_unittest.cc  google_crashdump_uploader.cc  google_crashdump_uploader.h  google_crashdump_uploader_test.cc  http_upload.cc  http_upload.h  libcurl_wrapper.cc  libcurl_wrapper.h  linux_libc_support.cc  linux_libc_support.h  linux_libc_support_unittest.cc  memory_mapped_file_unittest.cc  symbol_collector_client.cc  symbol_collector_client.h  symbol_upload.cc  symbol_upload.h  synth_elf.cc  synth_elf.h  synth_elf_unittest.cc
qbreakpad2/breakpad/src/common/linux/tests/: crash_generator.cc  crash_generator.h
qbreakpad2/breakpad/src/common/mac/: SymbolCollectorClient.m  dump_syms.h
qbreakpad2/breakpad/src/common/tests/: auto_tempdir.h
qbreakpad2/breakpad/src/google_breakpad/processor/: basic_source_line_resolver.h  call_stack.h  code_module.h  code_modules.h  exception_record.h  exploitability.h  microdump.h  microdump_processor.h  minidump.h  minidump_processor.h  proc_maps_linux.h  process_state.h  source_line_resolver_base.h  source_line_resolver_interface.h  stack_frame.h  stack_frame_symbolizer.h  stackwalker.h  symbol_supplier.h  system_info.h
qbreakpad2/breakpad/src/processor/: basic_code_module.h  basic_source_line_resolver.cc  basic_source_line_resolver_types.h  basic_source_line_resolver_unittest.cc  call_stack.cc  cfi_frame_info.cc  cfi_frame_info.h  cfi_frame_info_unittest.cc  disassembler_objdump.cc  disassembler_objdump.h  disassembler_objdump_unittest.cc  exploitability.cc  exploitability_linux.cc  exploitability_unittest.cc  exploitability_win.h  fast_source_line_resolver.cc  fast_source_line_resolver_types.h  fast_source_line_resolver_unittest.cc  logging.cc  logging.h  microdump.cc  microdump_processor.cc  microdump_processor_unittest.cc  microdump_stackwalk.cc  minidump.cc  minidump_dump.cc  minidump_processor.cc  minidump_processor_unittest.cc  minidump_stackwalk.cc  minidump_unittest.cc  module_comparer.cc  module_comparer.h  module_factory.h  module_serializer.cc  module_serializer.h  pathname_stripper.cc  pathname_stripper.h  postfix_evaluator-inl.h  postfix_evaluator.h  postfix_evaluator_unittest.cc  (+30 more)
qbreakpad2/breakpad/src/tools/linux/dump_syms/: dump_syms.cc
qbreakpad2/breakpad/src/tools/linux/md2core/: minidump-2-core.cc
qbreakpad2/breakpad/src/tools/linux/symupload/: minidump_upload.cc
qbreakpad2/breakpad/src/tools/mac/dump_syms/: dump_syms_tool.cc
qbreakpad2/breakpad/src/tools/mac/symupload/: symupload.mm
qbreakpad2/breakpad/src/tools/windows/dump_syms/: dump_syms.vcxproj  dump_syms.vcxproj.filters
